sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: ';' expected but '=' found.
  sorting:Boolean = true;
                  ^AlgBubbleSort1:6: error: ';' expected but '=' found.
    sorting:Boolean = true;
                    ^AlgBubbleSort1:12: error: ';' expected but '=' found.
        sorting:Boolean = false;
                        ^